@@ -1,5 +1,6 @@
 package utils;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -11,11 +12,19 @@ public class GenericSingletonFactory {
         Object instance= objectFactory.get(key);
         if(instance == null){
             try{
-                instance = c.newInstance();
+                instance = c.getDeclaredConstructor().newInstance();
                 objectFactory.put(key, instance);
             }catch(IllegalAccessException | InstantiationException e){
                 throw new RuntimeException("Exception while creating singleton instance for class : "+key+" - Exception Message : "+e);
-            }
+            } catch (IllegalArgumentException e) {
+				e.printStackTrace();
+			} catch (InvocationTargetException e) {
+				e.printStackTrace();
+			} catch (NoSuchMethodException e) {
+				e.printStackTrace();
+			} catch (SecurityException e) {
+				e.printStackTrace();
+			}
             
         }
         return c.cast(instance);
